js: added ex 02 bonus task

--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
   <!--snack 01-->
   <div id="app" class="container">
     <h1>snack</h1>
+    <!--form 1-->
     <div class="py-4">
       <label for="nome">
         Quanti elementi dovrà avere contere questo array?
       </label>
       <input type="text" name="data" id="data">
     </div>
+    <!--risultato degli ultimi 5 elementi-->
     <div id="result"></div>
+    <!--form 2 -->
     <div class="py-4">
       <label for="nome">
         Quanti elementi vuoi stampare?
       </label>
-      <input type="text" name="data" id="data">
-      
+      <input type="text" name="data" id="howmany">
     </div>
+    <!--bottone-->
     <button class="btn btn-success">
       Genera
     </button>
